--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/layout"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/background_dark">
+    android:padding="16dp"
+    tools:context=".MainActivity">
 
-    <!-- Fingerprint Icon -->
-    <ImageView
-        android:id="@+id/fingerprintIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_fingerprint"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"/>
-
-    <!-- Unlock Text -->
     <TextView
-        android:id="@+id/unlockText"
+        android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Touch to Unlock"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        android:layout_below="@id/fingerprintIcon"
+        android:text="Fingerprint Authentication"
+        android:textSize="24sp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="20dp" />
 
-    <!-- Animation View -->
-    <ImageView
-        android:id="@+id/animationView"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_below="@id/unlockText"
+    <Button
+        android:id="@+id/authenticateButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Authenticate with Fingerprint"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:visibility="invisible"
-        android:src="@drawable/fingerprint_animation"/>
+        android:layout_below="@id/titleTextView"
+        android:layout_marginTop="20dp" />
+
+    <!-- Add any other UI elements you need here -->
 
 </RelativeLayout>
